--- a/04_GuessGame/index.html
+++ b/04_GuessGame/index.html
@@ -12,11 +12,11 @@
             <h2>Guess the Number</h2>
             <form action="backend.php">
                 <label> <input type="text" name="number" id="number"> </label>
-                <label ><input type="submit" value="submit" id="submit"></label>
+                <label> <input type="submit" value="submit" id="submit"></label>
             </form>
             <div class="desription">
                 <h2 class="result"></h2>
-                <p>Previous Values</p>
+                <p>Previous Values <span id="Previous"></span></p>
                 <p> remaining : <span id="remaining"> 10 </span></p>
             </div>
         </div>
